Fixed talents page display on mobile

--- a/styles/charatalents.scss
+++ b/styles/charatalents.scss
@@ -5,6 +5,11 @@
 
     margin-bottom: 20px;
 
+    @media (max-width: 720px) {
+        grid-template-columns: 80px 1fr;
+        grid-gap: 5px;
+    }
+
     .talent-img-container {
         align-self: center;
         width: 100%;
@@ -17,6 +22,10 @@
 
         img {
             max-width: 70%;
+        }
+
+        @media (max-width: 720px) {
+            height: 80px;
         }
     }
 
@@ -53,6 +62,7 @@
 
         p {
             margin-top: 0;
+            margin-bottom: 0;
         }
     }
 }
